# programming-styles

./: README.md
04-cookbook/: Cargo.toml  README.md
04-cookbook/src/: cookbook.rs
05-pipeline/: Cargo.toml  README.md
07-infinite-mirror/: recursive.py  y-comb.py
08-kickforward/: README.md  kickfoward.js
11-letterbox/: README.md
12-closed-maps/: README.md
14-hollywood/: common.h
15-bulletin-board/: README.md
17-reflective/: README.md
18-aspects/: README.md
19-plugins/: README.md  compile.sh  plugins.cpp
19-plugins/modules/src/: freq1.cpp  print2.cpp
24-quarantine/: quarantine.js
26-spreadsheet/: README.md
27-lazy-rivers/: README.md  lazy_rivers.hs
28-actors/: README.md
29-dataspaces/: Cargo.toml  README.md
29-dataspaces/src/: data_spaces.rs
31-double-map-reduce/: Cargo.toml  README.md
31-double-map-reduce/src/: map_reduce.rs
33-restful/: tf.js
week1/: Cargo.toml
week1/src/: main.rs
week2/: Cargo.toml  README.md
week2/src/: cookbook.rs  pipeline.rs
week3/: kickfoward.js  recursive.py
week4/: Cargo.toml  README.md
week4/src/: closed_map.js  closed_map_normal.js  letterbox.rs
week5/: bulletin_board.cpp  hollywood.cpp
week6/: README.md  lazy_rivers.js  spreadsheet.js
week7/: README.md  aspects.js  config.ini  reflection.js
week7/modules/: module.cpp  module.h
week7/modules/src/: freq2.cpp  module.h  print1.cpp  words1.cpp  words2.cpp
week8/: Cargo.toml
week8/src/: actors.rs  lazy_rivers.rs
week9/: Cargo.toml  README.md
week9/src/: data_spaces.rs  map_reduce.rs
